tests/src/frontend/typechecking/invalid/type_switch_multi_pattern3.sk
base class B final () {
  children =
  | X
  | Y
  | Z
}

fun shouldFail(): String {
  Y() match {
  | X()
  | Y() ->
    "One\n"
  | Z() -> "Two\n"
  }
}
